k8s/geoip-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: geoip-http
  name: geoip-http
  namespace: osg-services
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: geoip-http
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: geoip-http
    spec:
      tolerations:
      - effect: NoSchedule
        key: nautilus.io/stashcache
        operator: Exists
      containers:
      - image: aaarora/geoip-http:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        name: geoip-http
        resources:
          limits:
            cpu: 4
            memory: 8Gi
          requests:
            cpu: 2
            memory: 5Gi
        volumeMounts:
        - mountPath: /home/
          name: cache-vol
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      #nodeSelector:
      #  kubernetes.io/hostname: stashcache.t2.ucsd.edu
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cache-vol
        emptyDir: {}
