k8s/geoip-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoip-service
  namespace: osg-services
spec:
  selector:
    k8s-app: geoip-http
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoip-http-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: ""
  namespace: osg-services
spec:
  rules:
  - host: geoip-http.nautilus.optiputer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: geoip-service
            port: 
              number: 80
